keyboard login and letex fix

--- a/syzoj/templates/contest_list.html
+++ b/syzoj/templates/contest_list.html
@@ -5,13 +5,13 @@
     <h1>比赛列表</h1>
 
     <div class="am-u-sm-12">
-        <table class="am-table" align = "center">
+        <table class="am-table">
             <thead>
             <tr>
-                <th>比赛名称</th>
-                <th>开始时间</th>
-                <th>结束时间</th>
-                <th>比赛介绍</th>
+                <th><center>比赛名称</center></th>
+                <th><center>开始时间</center></th>
+                <th><center>结束时间</center></th>
+                <th><center>比赛介绍</center></th>
             </tr>
             </thead>
             <tbody>
