--- a/syzoj/templates/login.html
+++ b/syzoj/templates/login.html
@@ -12,18 +12,18 @@
                 <label class="am-u-sm-2 am-form-label">用户名</label>
 
                 <div class="am-u-sm-10">
-                    <input type="text" placeholder="请输入用户名" id="username">
+                    <input type="text" placeholder="请输入用户名" id="username" onkeydown = keyhit()>
                 </div>
             </div>
             <div class="am-form-group">
                 <label class="am-u-sm-2 am-form-label">密码</label>
 
                 <div class="am-u-sm-10">
-                    <input type="password" placeholder="请输入密码" id="password">
+                    <input type="password" placeholder="请输入密码" id="password" onkeydown = keyhit()>
                 </div>
             </div>
 
-            <div class="am-form-group">
+            <div name = "loginbutton" class="am-form-group">
                 <div class="am-u-sm-10 am-u-sm-offset-2">
                     <p class="am-btn am-btn-default" id="login">登陆</p>
                 </div>
@@ -35,6 +35,13 @@
     {% endblock %}
     {% block script %}
     <script type="text/javascript">
+function keyhit() {
+	if (event.keyCode == 13) {
+		event.returnValue = false;
+		event.cancel = true;
+		login();
+	}
+}
 function show_error(error){
     $("#error_info").text(error);
     $("#error").show();
