--- a/syzoj/templates/sign_up.html
+++ b/syzoj/templates/sign_up.html
@@ -13,14 +13,14 @@
                     <label class="am-u-sm-2 am-form-label">用户名</label>
 
                     <div class="am-u-sm-10">
-                        <input type="text" placeholder="用户名将用于登陆" id="username">
+                        <input type="text" placeholder="用户名将用于登陆" id="username" onkeydown = keyhit()>
                     </div>
                 </div>
                 <div class="am-form-group">
                     <label class="am-u-sm-2 am-form-label">邮箱</label>
 
                     <div class="am-u-sm-10">
-                        <input type="email" placeholder="电子邮箱" id="email">
+                        <input type="email" placeholder="电子邮箱" id="email" onkeydown = keyhit()>
                     </div>
                 </div>
                 <div class="am-form-group">
@@ -28,8 +28,8 @@
 
                     <div class="am-u-sm-10">
                         <fieldset class="am-form-set">
-                            <input type="password" placeholder="设置一个密码吧" id="password1">
-                            <input type="password" placeholder="再输入一遍" id="password2">
+                            <input type="password" placeholder="设置一个密码吧" id="password1" onkeydown = keyhit() >
+                            <input type="password" placeholder="再输入一遍" id="password2" onkeydown = keyhit()>
                         </fieldset>
                     </div>
                 </div>
@@ -47,6 +47,13 @@
 
 {% block script %}
 <script type="text/javascript">
+function keyhit() {
+	if (event.keyCode == 13) {
+		event.returnValue = false;
+		event.cancel = true;
+		submit();
+	}
+}
 function show_error(error){
     $("#error_info").text(error);
     $("#error").show();
