--- a/syzoj/templates/submit.html
+++ b/syzoj/templates/submit.html
@@ -7,12 +7,12 @@
 		    <div class="am-form-group">
 		      <label for="doc-select-1">选择语言</label>
 		      <select id="doc-select-1" name="language">
-		      		<option value="option1">GNU C++98</option>
-                                <option value="option2">GNU C++11</option>
-                                <option value="option3">GNU GCC</option>
-                                <option value="option4">Python3</option>
-                                <option value="option5">Runy2.3</option>
-                                <option value="option6">Haskell GHC7</option>
+		      		<option value="GNU C++98">GNU C++98</option>
+                                <option value="GNU C++11">GNU C++11</option>
+                                <option value="GNU GCC">GNU GCC</option>
+                                <option value="Python3">Python3</option>
+                                <option value="Ruby2.3">Runy2.3</option>
+                                <option value="Haskell GHC7">Haskell GHC7</option>
 		      </select>
 		      <span class="am-form-caret"></span>
 		    </div>
