--- a/syzoj/templates/login.html
+++ b/syzoj/templates/login.html
@@ -12,7 +12,7 @@
                 <label class="am-u-sm-2 am-form-label">用户名</label>
 
                 <div class="am-u-sm-10">
-                    <input type="text" placeholder="请输入用户名" id="username" onkeydown = keyhit()>
+                    <input type="text" placeholder="请输入用户名" id="username">
                 </div>
             </div>
             <div class="am-form-group">
