修复了一个拼写错误....

--- a/syzoj/templates/submit.html
+++ b/syzoj/templates/submit.html
@@ -11,7 +11,7 @@
                                 <option value="GNU C++11">GNU C++11</option>
                                 <option value="GNU GCC">GNU GCC</option>
                                 <option value="Python3">Python3</option>
-                                <option value="Ruby2.3">Runy2.3</option>
+                                <option value="Ruby2.3">Ruby2.3</option>
                                 <option value="Haskell GHC7">Haskell GHC7</option>
 		      </select>
 		      <span class="am-form-caret"></span>
